[tool.poetry]
name = "sophos-autologin"
version = "0.1.0"
description = ""
authors = ["iamkroot <kroot.patel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
psutil = "^5.6.7"
beautifulsoup4 = "^4.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
