[tool.poetry]
name = "sophos-autologin"
version = "0.1.0"
description = "Automated cyclic login to multiple Sophos/Cyberoam accounts"
authors = ["iamkroot <kroot.patel@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iamkroot/sophos-autologin"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
psutil = "^5.6.7"
beautifulsoup4 = "^4.8.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
